# How-to update requirements.txt:
# pip install pip-tools
# pip-compile --upgrade --resolver=backtracking -o requirements.txt pyproject.toml
# pip-compile --upgrade --extra dev --resolver=backtracking -o dev_requirements.txt pyproject.toml
# pip-sync requirements.txt dev_requirements.txt

[project]
name = "running_hot"
version = "1.0"
dependencies = ["gpxplotter", "fit2gpx"]

[project.optional-dependencies]
dev = ["black", "flake8", "isort"]

[tool.black]
line-length = 200

[tool.isort]
profile = "black"
line_length = 200

